Remove Piper TTS (speaking) from voice extension
Removes Piper text-to-speech end-to-end while leaving Parakeet ASR
voice input intact. Drops the :voice/respond toggle, related state
helpers, prompt/harness wiring, and synthetic settings-dedup fixtures.